# apm2

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_PROMPT.md  CHANGELOG.md  CLIPPY_FIX.md  CODEX_R3.md  CODEX_R4.md  COMMIT_PUSH.md  COMPLETE_R2.md  CONTRIBUTING.md  Cargo.toml  DAEMON.md  FIX_PROMPT.md  FIX_PROMPT_R2.md  FIX_PROMPT_R3.md  FIX_PROMPT_R4.md  FIX_PROMPT_R5.md  FIX_PROMPT_R6.md  IMPL_PROMPT.md  LICENSE-APACHE  LICENSE-MIT  MERGE_AND_FIX_R9.md  MERGE_CONFLICT_R6.md  MIGRATION_PLAN.md  PR_REVIEW.md  README.md  ROOT_ONBOARDING.cac.md  SECURITY.md  cliff.toml  deny.toml  ecosystem.example.toml  fix-pr638-security-round1.md  fix-prompt-r2-targeted.md  fix-prompt-r2.md  fix-round6-prompt.md  flake.nix  forge-admission-cycle-prd.json  oracle-prd-review.sh  pr.diff  (+10 more)
crates/apm2-cli/: AGENTS.json  AGENTS.md  Cargo.toml
crates/apm2-cli/src/: exit_codes.rs  main.rs
crates/apm2-cli/src/client/: AGENTS.json  AGENTS.md  daemon.rs  mod.rs  protocol.rs
crates/apm2-cli/src/commands/: AGENTS.json  AGENTS.md  cac.rs  capability.rs  ci.rs  consensus.rs  coordinate.rs  creds.rs  daemon.rs  episode.rs  event.rs  evidence.rs  export.rs  fac.rs  fac_bench.rs  fac_bootstrap.rs  fac_broker.rs  fac_caches.rs  fac_config.rs  fac_economics.rs  fac_gates_job.rs  fac_gc.rs  fac_install.rs  fac_job.rs  fac_key_material.rs  fac_permissions.rs  fac_policy.rs  fac_preflight.rs  fac_quarantine.rs  fac_queue.rs  fac_queue_lifecycle_dual_write.rs  fac_queue_submit.rs  fac_review.rs  fac_secure_io.rs  fac_utils.rs  fac_warm.rs  fac_worker.rs  factory.rs  mod.rs  pack.rs  (+5 more)
crates/apm2-cli/tests/: ci_merge_policy_invariants.rs  e2e_deterministic_failures.rs  episode_integration.rs  operator_shutdown.rs  req_0041_fac_worker_queue_intake.rs  tck_00392_operator_shutdown.rs  tck_00511_fac_worker.rs  tck_00601_e2e_deterministic_failures.rs
crates/apm2-core/: AGENTS.json  AGENTS.md  Cargo.toml  build.rs  clippy.toml
crates/apm2-core/benches/: README.md  hotswap_benchmarks.rs  ipc_benchmarks.rs  shutdown_benchmarks.rs  spawn_benchmarks.rs  state_benchmarks.rs  supervisor_benchmarks.rs
crates/apm2-core/benches/common/: mod.rs
crates/apm2-core/bootstrap/: README.md
crates/apm2-core/bootstrap/schemas/: bootstrap.admission_receipt.v1.schema.json  bootstrap.common.v1.schema.json  bootstrap.context_pack_spec.v1.schema.json  bootstrap.envelope.v1.schema.json  bootstrap.patch_record.v1.schema.json
crates/apm2-core/bootstrap/test_vectors/: MANIFEST.json  canonicalize.json
crates/apm2-core/proptest-regressions/htf/: epoch_seal.txt
crates/apm2-core/src/: continuity.rs  disclosure.rs  governance.rs  lib.rs
crates/apm2-core/src/adapter/: AGENTS.json  AGENTS.md  black_box.rs  claude_code.rs  config.rs  error.rs  event.rs  mod.rs  tests.rs  traits.rs  watcher.rs
crates/apm2-core/src/agent/: AGENTS.json  AGENTS.md  exit.rs  mod.rs
crates/apm2-core/src/bootstrap/: AGENTS.json  AGENTS.md  mod.rs
crates/apm2-core/src/budget/: AGENTS.json  AGENTS.md  mod.rs
crates/apm2-core/src/cac/: AGENTS.json  AGENTS.md  admission.rs  capability_gate.rs  compiler.rs  conformance.rs  contract_registry.rs  dcp_index.rs  defect.rs  export.rs  freeze_check.rs  manifest.rs  mod.rs  (+5 more)
crates/apm2-core/tests/: changeset_published_integration.rs  ci_guardrails.rs  coordination_integration.rs  e2e_default_mode.rs  e2e_integration.rs  handoff_integration.rs  proof_cache.rs  seccomp_integration.rs  security_regression.rs  tck_00471_selector_closure.rs  tck_00472_proof_cache.rs  tck_00550_ci_guardrails.rs  tck_00559_security_regression.rs  tck_00588_e2e_default_mode.rs  test_ct_eq.rs
crates/apm2-daemon/: AGENTS.json  AGENTS.md  Cargo.toml  build.rs
crates/apm2-daemon/benches/: latency_benchmarks.rs  verifier_cache_bench.rs
crates/apm2-daemon/src/: fs_safe.rs  governance.rs  governance_channel.rs  handlers.rs  ipc_server.rs  ledger.rs  ledger_poll.rs  lib.rs  main.rs  metrics.rs  state.rs
crates/apm2-daemon/tests/: E2E_AGENT_TEST_POLICY.md  adv_012_legacy_ipc.rs  alias_reconciliation.rs  business_continuity.rs  cas_persistence.rs  cas_wiring.rs  claude_code_adapter.rs  crash_recovery.rs  divergence_watchdog.rs  e2e_budget.rs  e2e_compaction.rs  e2e_evidence.rs  e2e_lifecycle.rs  e2e_receipt.rs  e2e_shutdown.rs  e2e_telemetry.rs  e2e_tool.rs  envelope_binding.rs  episode_event_persistence.rs  evidence_export.rs  fac_autonomous_e2e.rs  fac_htf_authority_gates.rs  fac_lifecycle.rs  fac_receipt_identity_idempotency.rs  gate_orchestrator.rs  hef_fac_v0_e2e.rs  hef_fac_vnext_changeset_identity_e2e.rs  hef_redteam.rs  ipc_shutdown.rs  launch_rollout.rs  pcac_conformance.rs  pcac_falsification.rs  pcac_policy.rs  projection_economics_e2e.rs  projections.rs  protocol_integration.rs  protocol_persistence.rs  publish_changeset_fail_closed.rs  raw_adapter.rs  reviewer_telemetry.rs  (+49 more)
crates/apm2-holon/: AGENTS.json  AGENTS.md  Cargo.toml
crates/apm2-holon/src/: artifact.rs  context.rs  core_ledger_adapter.rs  defect.rs  error.rs  ledger.rs  lib.rs  receipt.rs  result.rs  skill.rs  spawn.rs  stop.rs  tests.rs  traits.rs  work.rs
crates/apm2-holon/tests/: episode_integration.rs  orchestration_integration.rs  skill_integration.rs
crates/apm2-lab/: Cargo.toml
crates/apm2-lab/lab/: agent_alpha_system.md  agent_beta_system.md
crates/apm2-lab/src/: agent.rs  closure.rs  event.rs  harness.rs  ledger.rs  lib.rs  main.rs  metrics.rs  prompt.rs  scoring.rs  spec.rs  verdict.rs  world.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cli_args.rs  job_spec_parse.rs  keyset_id_parse.rs  public_key_id_parse.rs  tool_request.rs
xtask/: Cargo.toml
xtask/src/: main.rs  reviewer_state.rs  shell_escape.rs  ticket_status.rs  util.rs  worktree_health.rs
xtask/src/aat/: anti_gaming.rs  cac_harness.rs  determinism_guard.rs  evidence.rs  executor.rs  mod.rs  parser.rs  tool_config.rs  types.rs  ux_verifier.rs  validation.rs  variation.rs
xtask/src/tasks/: aat.rs  capabilities.rs  check.rs  commit.rs  finish.rs  lint.rs  mod.rs  push.rs  review.rs  review_gate.rs  security_review_exec.rs  security_review_fix.rs  selftest.rs  start_ticket.rs
(+4368 files in other folders)
