[workspace]
resolver = "2"
members = [
    "crates/apm2-core",
    "crates/apm2-daemon",
    "crates/apm2-cli",
    "xtask", "crates/apm2-holon",
]
exclude = ["fuzz"]

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/apm2"
homepage = "https://github.com/your-org/apm2"
documentation = "https://docs.rs/apm2"
authors = ["apm2 contributors"]
keywords = ["process-manager", "cli", "ai", "claude", "daemon"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
bincode = "1.3"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Security / Credentials
keyring = "3"
secrecy = { version = "0.10", features = ["serde"] }

# IPC
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0"
zbus = "4.4"

# Shell scripting
xshell = "0.2"
serde_yaml = "0.9"
shell-escape = "0.1"
shell-words = "1.1"

# Async traits
async-trait = "0.1"

# Utilities
glob = "0.3"
uuid = { version = "1.0", features = ["v4", "v7", "serde"] }
nix = { version = "0.30", features = ["signal", "process", "fs", "term"] }
wait-timeout = "0.2"
directories = "6"
humantime = "2.1"
ctrlc = "3.4"
regex = "1.10"
once_cell = "1.19"
sysinfo = "0.31"
memchr = "2.7"

# Markdown parsing
pulldown-cmark = "0.10"

# Testing
proptest = "1.0"
tempfile = "3.10"

# Git hooks
cargo-husky = { version = "1.5.0", default-features = false }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Protocol Buffers
prost = "0.13"
prost-types = "0.13"
prost-build = "0.13"

# Cryptography
base64 = "0.22"
blake3 = "1.5"
hex = "0.4"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hmac = "0.12"
sha2 = "0.10"
subtle = "2.6"
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }

# HTTP Server (webhook handler)
axum = "0.7"
http = "1.0"
http-body-util = "0.1"
tower = { version = "0.4", features = ["util"] }

# Sandboxing (Linux only)
seccompiler = "0.5"
libc = "0.2"

# TLS
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"
rcgen = { version = "0.13", features = ["x509-parser"] }
x509-cert = { version = "0.2", features = ["builder", "pem"] }

# Unicode normalization
unicode-normalization = "0.1"

# JSON Schema validation
# SECURITY: Disable default features to prevent SSRF via resolve-http (reqwest)
jsonschema = { version = "0.40", default-features = false }

# JSON Patch (RFC 6902) and Merge Patch (RFC 7396)
json-patch = "4.1"

# Internal crates
apm2-core = { version = "0.3.0", path = "crates/apm2-core" }
apm2-holon = { version = "0.3.0", path = "crates/apm2-holon" }

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Allow common patterns
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"

# Allow cargo lints that are not actionable
cargo_common_metadata = "allow"  # No README files for internal crates
multiple_crate_versions = "allow"  # Caused by transitive dependencies

# Allow nursery lints that are overly strict
significant_drop_tightening = "allow"  # RwLock guard patterns are fine

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
debug = true

[profile.bench]
lto = true
codegen-units = 1
