[package]
name = "apm2-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
apm2-core = { path = "../crates/apm2-core" }
prost = "0.13"

[[bin]]
name = "fuzz_cli_args"
path = "fuzz_targets/cli_args.rs"

[[bin]]
name = "fuzz_tool_request"
path = "fuzz_targets/tool_request.rs"
