[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Development automation tasks for apm2"
publish = false

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
xshell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
