[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Development automation tasks for apm2"
publish = false

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
xshell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
glob = { workspace = true }
nix = { workspace = true }
wait-timeout = { workspace = true }
directories = { workspace = true }
pulldown-cmark = { workspace = true }
sysinfo = { workspace = true }
shell-escape = { workspace = true }
shell-words = { workspace = true }
syn = { version = "2.0", features = ["full", "parsing"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
strsim = "0.11"
apm2-core = { workspace = true }

[lints]
workspace = true
