[package]
name = "apm2-cli"
description = "CLI client for apm2 - AI CLI process manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "apm2"
path = "src/main.rs"

[dependencies]
# Internal crates
apm2-core.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# CLI
clap.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
directories.workspace = true
uuid.workspace = true
tempfile.workspace = true
chrono.workspace = true
regex.workspace = true

[lints]
workspace = true
