[package]
name = "apm2-core"
description = "Core library for apm2 - AI CLI process manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Time
chrono.workspace = true

# Security / Credentials
keyring.workspace = true
secrecy.workspace = true

# IPC
bytes.workspace = true

# Utilities
uuid.workspace = true
nix.workspace = true
directories.workspace = true
humantime.workspace = true
regex.workspace = true
once_cell.workspace = true
memchr.workspace = true

# Database
rusqlite.workspace = true

# Protocol Buffers
prost.workspace = true
prost-types.workspace = true

# Cryptography
blake3.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
zeroize.workspace = true

# Sandboxing (Linux only, conditional compilation)
[target.'cfg(target_os = "linux")'.dependencies]
seccompiler.workspace = true
libc.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
tempfile.workspace = true

[build-dependencies]
prost-build.workspace = true

[features]
default = []
# Enable test utilities for deterministic testing
test-utils = []

[lints]
workspace = true

# Semver lint exceptions for INTERNAL protobuf-generated types only.
# Proto-generated types (in crate::events) are expected to evolve with new fields and enum variants.
# This is standard proto evolution and these types are internal to the kernel.
#
# NOTE: These exceptions MUST NOT be applied to public-facing library APIs.
# Only internal proto-generated event types should use these relaxed rules.
[package.metadata.cargo-semver-checks.lints]
constructible_struct_adds_field = "allow"
enum_variant_added = "allow"

[[bench]]
name = "ipc_benchmarks"
harness = false

[[bench]]
name = "supervisor_benchmarks"
harness = false

[[bench]]
name = "shutdown_benchmarks"
harness = false

[[bench]]
name = "spawn_benchmarks"
harness = false

[[bench]]
name = "state_benchmarks"
harness = false

[[bench]]
name = "hotswap_benchmarks"
harness = false
