[package]
name = "apm2-core"
description = "Core library for apm2 - AI CLI process manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
postcard.workspace = true
toml.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Time
chrono.workspace = true

# Security / Credentials
keyring.workspace = true
secrecy.workspace = true

# IPC
bytes.workspace = true

# Utilities
uuid.workspace = true
nix.workspace = true
wait-timeout.workspace = true
directories.workspace = true
humantime.workspace = true
regex.workspace = true
once_cell.workspace = true
memchr.workspace = true
glob.workspace = true

# Unicode normalization
unicode-normalization.workspace = true

# JSON Schema validation
# SECURITY: Disable default features to prevent SSRF via resolve-http (reqwest)
jsonschema = { workspace = true, default-features = false }

# JSON Patch (RFC 6902) and Merge Patch (RFC 7396)
json-patch.workspace = true

# Filesystem
tempfile.workspace = true

# Database
rusqlite.workspace = true

# Protocol Buffers
prost.workspace = true
prost-types.workspace = true

# Cryptography
base64.workspace = true
blake3.workspace = true
hex.workspace = true
ed25519-dalek.workspace = true
hmac.workspace = true
sha2.workspace = true
subtle.workspace = true
rand.workspace = true
zeroize.workspace = true

# HTTP Server (webhook handler)
axum.workspace = true
http.workspace = true
http-body-util.workspace = true
tower.workspace = true

# CLI (optional, for clap introspection)
clap = { workspace = true, optional = true }

# TLS
rustls.workspace = true
tokio-rustls.workspace = true
webpki-roots.workspace = true
x509-cert.workspace = true

# Unix-specific (for TOCTOU mitigation via O_NOFOLLOW)
[target.'cfg(unix)'.dependencies]
libc.workspace = true

# Sandboxing (Linux only, conditional compilation)
[target.'cfg(target_os = "linux")'.dependencies]
seccompiler.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
serial_test.workspace = true
# Certificate generation (test-only)
rcgen.workspace = true
x509-cert.workspace = true
filetime = "0.2"

[build-dependencies]
prost-build.workspace = true
blake3.workspace = true
serde_json.workspace = true

[features]
default = []
# Enable test utilities for deterministic testing
test-utils = []
# Enable canonicalization test vectors for cross-platform verification
test_vectors = []
# Enable clap introspection for CLI command enumeration
clap-introspection = ["dep:clap"]
# Enable YubiHSM hardware support for T1 validator keys
# When disabled, YubiHsmProvider operates in mock mode for testing
yubihsm = []
# UNSAFE: Allow NoOpVerifier in non-test builds. For dev/testing only.
# Default builds ban NoOpVerifier at compile time (TCK-00550).
unsafe_no_verify = []

[lints]
workspace = true

# Semver lint exceptions for INTERNAL protobuf-generated types only.
# Proto-generated types (in crate::events) are expected to evolve with new fields and enum variants.
# This is standard proto evolution and these types are internal to the kernel.
#
# NOTE: These exceptions MUST NOT be applied to public-facing library APIs.
# Only internal proto-generated event types should use these relaxed rules.
[package.metadata.cargo-semver-checks.lints]
constructible_struct_adds_field = "allow"
enum_variant_added = "allow"

[[bench]]
name = "supervisor_benchmarks"
harness = false

[[bench]]
name = "shutdown_benchmarks"
harness = false

[[bench]]
name = "spawn_benchmarks"
harness = false

[[bench]]
name = "state_benchmarks"
harness = false

[[bench]]
name = "hotswap_benchmarks"
harness = false
