[package]
name = "apm2-daemon"
description = "Daemon binary for apm2 - AI CLI process manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "apm2_daemon"
path = "src/lib.rs"

[[bin]]
name = "apm2-daemon"
path = "src/main.rs"

[dependencies]
# Internal crates
apm2-core.workspace = true

# Async runtime
tokio.workspace = true
tokio-util.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Bytes
bytes.workspace = true

# CLI
clap.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Unix specifics
nix.workspace = true

# Time
chrono.workspace = true

# Utilities
directories.workspace = true
ctrlc.workspace = true

# Protocol Buffers
prost.workspace = true

# Cryptography
blake3.workspace = true
ed25519-dalek.workspace = true

# D-Bus (systemd integration)
zbus.workspace = true

# Error types
thiserror.workspace = true

[dev-dependencies]
# Testing utilities
tempfile.workspace = true
futures = "0.3"

[lints]
workspace = true
