[package]
name = "apm2-daemon"
description = "Daemon binary for apm2 - AI CLI process manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "apm2_daemon"
path = "src/lib.rs"

[[bin]]
name = "apm2-daemon"
path = "src/main.rs"

[dependencies]
# Internal crates
apm2-core.workspace = true
apm2-holon = { workspace = true, features = ["test-utils"] }

# Async runtime
tokio.workspace = true
tokio-util.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_bytes.workspace = true

# Bytes
bytes.workspace = true

# CLI
clap.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Unix specifics
nix.workspace = true

# Time
chrono.workspace = true

# Utilities
directories.workspace = true
ctrlc.workspace = true

# Protocol Buffers
prost.workspace = true

# Cryptography
blake3.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
hmac.workspace = true
sha2.workspace = true

# D-Bus (systemd integration)
zbus.workspace = true

# URL parsing (BLOCKER 1: secure host extraction vs authority confusion)
url.workspace = true

# Error types
thiserror.workspace = true

# Async traits
async-trait.workspace = true

# Security
secrecy.workspace = true
subtle.workspace = true
keyring.workspace = true
zeroize.workspace = true
rand.workspace = true

# UUID generation
uuid.workspace = true

# TLS (for crypto provider initialization)
rustls.workspace = true

# HTTP Client (GitHub API)
hyper.workspace = true
hyper-util.workspace = true
hyper-rustls.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true

# Database (persistent idempotency cache)
rusqlite.workspace = true

# Metrics / Observability (TCK-00268)
prometheus.workspace = true

# HTTP Server (metrics endpoint)
axum.workspace = true

# Futures traits (for framed streams)
futures = "0.3"

[dev-dependencies]
# Testing utilities
tempfile.workspace = true
# Benchmarking (TCK-00269)
criterion.workspace = true
rand.workspace = true

[build-dependencies]
prost-build.workspace = true

[lints]
workspace = true

# Semver lint exceptions for INTERNAL protobuf-generated types only.
# Proto-generated types (in crate::protocol::messages) are expected to evolve
# with new fields and enum variants. This is standard proto evolution and
# these types are internal to the daemon protocol.
#
# NOTE: These exceptions MUST NOT be applied to public-facing library APIs.
# Only internal proto-generated event types should use these relaxed rules.
[package.metadata.cargo-semver-checks.lints]
constructible_struct_adds_field = "allow"
enum_variant_added = "allow"

# Latency benchmarks for RFC-0017 (TCK-00269)
# - BENCH-001: spawn_ack_latency <100ms p99
# - BENCH-002: session_ready_latency <2s p99
# - BENCH-003: tool_mediation_overhead <5ms p50
[[bench]]
name = "latency_benchmarks"
harness = false

# Verifier cache amortization benchmark (TCK-00359)
[[bench]]
name = "verifier_cache_bench"
harness = false
