[package]
name = "apm2-holon"
description = "Holon trait and core types for holonic agent coordination"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Error handling
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_bytes = "0.11"
serde_json.workspace = true
serde_yaml.workspace = true

# Async runtime
tokio = { workspace = true, features = ["sync"] }

# Time
chrono.workspace = true

# Utilities
uuid.workspace = true
hex.workspace = true

# Cryptography
blake3.workspace = true

# Canonicalization
serde_jcs = "0.1"

# Logging
tracing.workspace = true

# Core substrate (optional — enabled by `core-ledger` feature)
apm2-core = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
proptest.workspace = true
# Core substrate is always available in tests for adapter verification
apm2-core = { workspace = true }

[features]
default = ["core-ledger"]
# Enable test utilities for deterministic testing
test-utils = []
# Write holon events into apm2-core ledger+CAS substrate (TCK-00670)
core-ledger = ["dep:apm2-core"]
# Keep legacy holon ledger chain for migration reads (TCK-00670)
legacy_holon_ledger = []

[lints]
workspace = true
