[package]
name = "apm2-lab"
description = "Disposable PASM theory laboratory harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "apm2-lab"
path = "src/main.rs"

[dependencies]
apm2-core.workspace = true

anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
